deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-app
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
      - name: app
        image: <ecr-repo-url>
        ports:
        - containerPort: 5000
