ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 80
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 80
